<resources>

    <string name="app_name">ElDrawo</string>
    <string name="title_activity_main">ElDrawo</string>
    
    <string name="dev_email">eldrawoandroid@gmail.com</string>
    <string name="dev_email_subject">ElDrawo feedback</string>
    
    <string name="menu_settings">Settings</string>
    <string name="sound_pref">Sounds</string>
    <string name="score_pref">Show score</string>
    <string name="drawing_pref_cat">Drawing</string>
    <string name="email_developer">Contact</string>
    
    <string name="mode_rect">Rectangle</string>
    <string name="mode_ellipse">Ellipse</string>
    <string name="mode_pencil">Pencil</string>
    <string name="mode_eraser">Eraser</string>
    <string name="mode_line">Line</string>
    <string name="mode_rainbow_pen">Rainbow pen</string>
    <string name="mode_cool_lines">Cool lines</string>
    <string name="mode_draw_four">Draw four</string>
    <string name="mode_scroll">Scroll</string>
    <string name="mode_fill">Fill</string>
    <string name="mode_spray">Spray</string>
    <string name="mode_tree">Tree</string>
    <string name="mode_mystery_fill">Mystery fill</string>
    
    <string name="filters">Filters</string>
    <string name="filter_inverse">Inverse</string>
    <string name="filter_grayscale">Grayscale</string>
    <string name="filter_horizontal_flip">Horizontal flip</string>
    <string name="filter_vertical_flip">Vertical flip</string>
    <string name="filter_pixel">Pixelate</string>
    <string name="filter_dither">Dither</string>
    
    
    <string name="color_chooser">Color chooser</string>
    <string name="brush_size">Brush size</string>
    <string name="fill_shapes">Fill shapes</string>
    <string name="post_score">Post score</string>
    <string name="clear_drawing">Clear</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="post_to_fb">Post to facebook</string>
    
    <string name="your_name">Your name</string>
    <string name="ok">OK!</string>
    <string name="enter_your_name">Enter your name!</string>
    <string name="couldnt_connect">Couldn\'t connect</string>
    
    <string name="made_with_eld">made with ElDrawo for Android, score:</string>
    
    <string name="about_long">ElDrawo is a drawing tool like Kid Pix for adults and children.\nAnother 
        great program is TuxPaint.\nDon\'t 
        forget to share your pictures!\n\nIf
        you would like to support ElDrawo please contact the developer.\n\nThis 
        software uses the following third party software:\nAmbilWarna 
        library, under the Apache License 2.0\nApache 
        HttpComponents (httpmime-4.1.3.jar), under the Apache License 2.0\nActionBarSherlock,
        under the Apache License 2.0\nhttp://www.apache.org/licenses/LICENSE-2.0</string>
        
    <string name="load_continue">Continue</string>
    <string name="load_keep">Keep old image</string>
    <string name="load_status_ok">Old image saved</string>
    <string name="load_status_failed">Could not save what you were working on. Do you want to edit the incoming image (your old image will be deleted)?</string>
    
    <string name="multiplayer">Multiplayer</string>
    <string name="rooms">Rooms</string>
    <string name="donate">Donate</string>
    <string name="new_room">New room</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    

</resources>