<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- >item
        android:id="@+id/menu_color_chooser"
        android:orderInCategory="1"
        android:title="@string/color_chooser"
        android:showAsAction="always"
        android:icon="@drawable/chooser"/>
    <item
        android:id="@+id/menu_brush_size"
        android:orderInCategory="2"
        android:title="@string/brush_size"
        android:showAsAction="always"
        android:icon="@drawable/brushsize"/-->
    
    
    <item
        android:id="@+id/menu_choose_filter"
        android:orderInCategory="69"
        android:showAsAction="never"
        android:title="@string/filters"/> 
    
    <item
        android:id="@+id/menu_fill_shapes"
        android:orderInCategory="70"
        android:showAsAction="never"
        android:title="@string/fill_shapes"
        android:checkable="true"/>
    

        
    <item
        android:id="@+id/menu_clear_drawing"
        android:orderInCategory="72"
        android:showAsAction="never"
        android:title="@string/clear_drawing"/>      
    
    <item
        android:id="@+id/menu_save"
        android:orderInCategory="73"
        android:showAsAction="never"
        android:title="@string/save"/>        
    
    
	<item
        android:id="@+id/menu_multiplayer"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/multiplayer"/>  
    
    
    
    
    <item
        android:id="@+id/menu_fb_post"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/post_to_fb"/>
    <item
        android:id="@+id/email_dev"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/email_developer"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>